modfication chemin images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!----------Header---------->
   <header class="header">
-    <img class="header__logo" src="../images/logo/Reservia.svg" alt="Logo du site" />
+    <img class="header__logo" src="./images/logo/Reservia.svg" alt="Logo du site" />
     <nav class="header__menu">
       <ul class="header__navigation">
         <li><a class="header__btn header__btn--accommodation" href="#hebergements">Hébergements</a></li>
@@ -82,7 +82,7 @@
           <div class="city-accommodation__layout">
             <a href="">
               <article class="city-card">
-                <img class="city-card__picture" src="../images/hebergements/AubergeDeLaCannebiere.jpg"
+                <img class="city-card__picture" src="./images/hebergements/AubergeDeLaCannebiere.jpg"
                   alt="Auberge de la Cannebière" />
                 <div class="city-card__content">
                   <h3 class="city-card__title">Auberge de la Cannebière</h3>
@@ -99,7 +99,7 @@
             </a>
             <a href="#">
               <article class="city-card">
-                <img class="city-card__picture" src="../images/hebergements/HotelDuPort.jpg" alt="Hôtel du port" />
+                <img class="city-card__picture" src="./images/hebergements/HotelDuPort.jpg" alt="Hôtel du port" />
                 <div class="city-card__content">
                   <h3 class="city-card__title">Hôtel du port</h3>
                   <p class="city-card__description">Nuit à partir de 52<span class="price">€</span></p>
@@ -115,7 +115,7 @@
             </a>
             <a href="#">
               <article class="city-card">
-                <img class="city-card__picture" src="../images/hebergements/HotelLesMouettes.jpg"
+                <img class="city-card__picture" src="./images/hebergements/HotelLesMouettes.jpg"
                   alt="Hôtel les mouettes" />
                 <div class="city-card__content">
                   <h3 class="city-card__title">Hôtel les mouettes</h3>
@@ -132,7 +132,7 @@
             </a>
             <a href="#">
               <article class="city-card">
-                <img class="city-card__picture" src="../images/hebergements/hotelDeLaMer.jpg" alt="Hôtel de la mer" />
+                <img class="city-card__picture" src="./images/hebergements/hotelDeLaMer.jpg" alt="Hôtel de la mer" />
                 <div class="city-card__content">
                   <h3 class="city-card__title">Hôtel de la mer</h3>
                   <p class="city-card__description">Nuit à partir de 46<span class="price">€</span></p>
@@ -148,7 +148,7 @@
             </a>
             <a href="#">
               <article class="city-card">
-                <img class="city-card__picture" src="../images/hebergements/AubergeLePanier.jpg"
+                <img class="city-card__picture" src="./images/hebergements/AubergeLePanier.jpg"
                   alt="Auberge Le Panier" />
                 <div class="city-card__content">
                   <h3 class="city-card__title">Auberge Le Panier</h3>
@@ -165,7 +165,7 @@
             </a>
             <a href="#">
               <article class="city-card">
-                <img class="city-card__picture" src="../images/hebergements/hotelChezAmina.jpg"
+                <img class="city-card__picture" src="./images/hebergements/hotelChezAmina.jpg"
                   alt="Hôtel chez Amina" />
                 <div class="city-card__content">
                   <h3 class="city-card__title">Hôtel chez Amina</h3>
@@ -193,7 +193,7 @@
           <div class="popular-accommodation__layout">
             <a href="#">
               <article class="popular-card">
-                <img src="../images/hebergements/HotelLeSoleil.jpg" alt="Hôtel Le soleil du matin"
+                <img src="./images/hebergements/HotelLeSoleil.jpg" alt="Hôtel Le soleil du matin"
                   class="popular-card__picture">
                 <div class="popular-card__content">
                   <h3 class="popular-card__title">Hôtel Le soleil du matin</h3>
@@ -210,7 +210,7 @@
             </a>
             <a href="#">
               <article class="popular-card">
-                <img src="../images/hebergements/auCoeurDeLeau.jpg" alt="Au cœur de l'eau Chambres d'hôtes"
+                <img src="./images/hebergements/auCoeurDeLeau.jpg" alt="Au cœur de l'eau Chambres d'hôtes"
                   class="popular-card__picture">
                 <div class="popular-card__content">
                   <h3 class="popular-card__title">Au cœur de l'eau Chambres d'hôtes</h3>
@@ -228,7 +228,7 @@
             </article></a>
             <a href="#">
               <article class="popular-card">
-                <img src="../images/hebergements/hotelToutBleu.jpg" alt="Hôtel Tout bleu et Blanc"
+                <img src="./images/hebergements/hotelToutBleu.jpg" alt="Hôtel Tout bleu et Blanc"
                   class="popular-card__picture">
                 <div class="popular-card__content">
                   <h3 class="popular-card__title">Hôtel Tout bleu et Blanc</h3>
@@ -253,7 +253,7 @@
         <div class="activity__layout">
           <a href="#">
             <article class="activity-card activity-card--xlarge">
-              <img class="activity-card__picture activity-card__picture--xlarge" src="../images/activites/VieuxPort.jpg"
+              <img class="activity-card__picture activity-card__picture--xlarge" src="./images/activites/VieuxPort.jpg"
                 alt="Vieux Port">
               <h3 class="activity-card__title">Vieux Port</h3>
             </article>
@@ -262,21 +262,21 @@
             <a href="#">
               <article class="activity-card activity-card--large">
                 <img class="activity-card__picture activity-card__picture--large"
-                  src="../images/activites/FortDePomegues.jpg" alt="Fort de Pomègues">
+                  src="./images/activites/FortDePomegues.jpg" alt="Fort de Pomègues">
                 <h3 class="activity-card__title">Fort de Pomègues</h3>
               </article>
             </a>
             <a href="#">
               <article class="activity-card activity-card--xsmall">
                 <img class="activity-card__picture activity-card__picture--xsmall"
-                  src="../images/activites/IlesDuFrioul.jpg" alt="Îles du Frioul">
+                  src="./images/activites/IlesDuFrioul.jpg" alt="Îles du Frioul">
                 <h3 class="activity-card__title">Îles du Frioul</h3>
               </article>
             </a>
           </div>
           <a href="#">
             <article class="activity-card activity-card--xlarge">
-              <img class="activity-card__picture activity-card__picture--xlarge" src="../images/activites/Calanques.jpg"
+              <img class="activity-card__picture activity-card__picture--xlarge" src="./images/activites/Calanques.jpg"
                 alt="Parc National des Calanques">
               <h3 class="activity-card__title">Parc National des Calanques</h3>
             </article>
@@ -285,14 +285,14 @@
             <a href="#">
               <article class="activity-card activity-card--small">
                 <img class="activity-card__picture activity-card__picture--small"
-                  src="../images/activites/NotreDame.jpg" alt="Notre-Dame-de-la-Garde">
+                  src="./images/activites/NotreDame.jpg" alt="Notre-Dame-de-la-Garde">
                 <h3 class="activity-card__title">Notre-Dame-de-la-Garde</h3>
               </article>
             </a>
             <a href="#">
               <article class="activity-card activity-card--medium">
                 <img class="activity-card__picture activity-card__picture--medium"
-                  src="../images/activites/ParcLongchamp.jpg" alt="Parc Longchamp">
+                  src="./images/activites/ParcLongchamp.jpg" alt="Parc Longchamp">
                 <h3 class="activity-card__title">Parc Longchamp</h3>
               </article>
             </a>
