Correction erreur w3c commentaires index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <!----------Header---------->
+  <!--Header-->
   <header class="header">
     <img class="header__logo" src="./images/logo/Reservia.svg" alt="Logo du site" />
     <nav class="header__menu">
@@ -29,7 +29,7 @@
   <div class="container">
 
     <main>
-      <!--------Recherche et filtres---------->
+      <!--Recherche et filtres-->
       <section id="hebergements" class="search">
         <h1 class="search__title">
           Trouvez votre hébergement pour des vacances de rêve
@@ -74,7 +74,7 @@
         </div>
       </section>
 
-      <!----------Cartes hébergements--------->
+      <!--Cartes hébergements-->
       <section class="accommodation">
         <!--Cartes ville-->
         <div class="city-accommodation">
@@ -246,7 +246,7 @@
         </div>
       </section>
 
-      <!----------Cartes activités---------->
+      <!--Cartes activités-->
       <section id="activites" class="activity">
         <h2 class="activiy__title">Activités à Marseille</h2>
         <div class="activity__layout">
@@ -301,7 +301,7 @@
     </main>
   </div>
 
-  <!---------Footer---------->
+  <!--Footer-->
   <footer class="footer">
     <div class="footer-section">
       <h4 class="footer-section__title">À Propos</h4>
