--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <title>Reservia</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
-  <!--Header-->
+  <!--Header--> 
   <header class="header">
     <img class="header__logo" src="./images/logo/Reservia.svg" alt="Logo du site" />
     <nav class="header__menu">
