correction media queries

--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
   <title>Reservia</title>
   <link rel="shortcut icon" href="images/logo/favicon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
-  <!--Header--> 
+  <!--Header-->
   <header class="header">
     <img class="header__logo" src="./images/logo/Reservia.svg" alt="Logo du site" />
     <nav class="header__menu">
@@ -166,8 +165,7 @@
             </a>
             <a href="#">
               <article class="city-card">
-                <img class="city-card__picture" src="./images/hebergements/hotelChezAmina.jpg"
-                  alt="Hôtel chez Amina" />
+                <img class="city-card__picture" src="./images/hebergements/hotelChezAmina.jpg" alt="Hôtel chez Amina" />
                 <div class="city-card__content">
                   <h3 class="city-card__title">Hôtel chez Amina</h3>
                   <p class="city-card__description">Nuit à partir de 96<span class="price">€</span></p>
@@ -284,8 +282,8 @@
           <div class="activity__block">
             <a href="#">
               <article class="activity-card activity-card--small">
-                <img class="activity-card__picture activity-card__picture--small"
-                  src="./images/activites/NotreDame.jpg" alt="Notre-Dame-de-la-Garde">
+                <img class="activity-card__picture activity-card__picture--small" src="./images/activites/NotreDame.jpg"
+                  alt="Notre-Dame-de-la-Garde">
                 <h3 class="activity-card__title">Notre-Dame-de-la-Garde</h3>
               </article>
             </a>
